<resources>
    <string name="app_name">Practice Java</string>
    <string name="action_settings">Settings</string>
    <string name="inicio">Hello! This is an application that contains a database of questions similar to the ones from Oracle´s 1Z0-803 Exam.\n
   </string>
    <string name="botao">Get Question</string>
    <string name="toastRespostaCerta">Your Answer is correct!</string>
    <string name="toastRespostaErrada">Your answer is incorrect.</string>
    <string name="title_activity_questao1">Question 1</string>
    <string name="title_activity_questao2">Question 2</string>
    <string name="Questao2">Given:\n
        \n
	import static java.lang.System.*;\n
	class _ {\n
	static public void main(String... __A_V_) {\n
	String $ = "";\n
	for(int x=0; ++x "less than" __A_V_.length; )\n
	$ += __A_V_[x];\n
	out.println($);\n
	}\n
	}\n
	\n
	And the command line:\n
	\n
	java _ - A .\n
	\n
	What is the result? \n</string>
    <string name="questao2A">A. -A</string>
    <string name="questao2B">B. A.</string>
    <string name="questao2C">C. -A.</string>
    <string name="questao2D">D. _A.</string>
    <string name="questao2E">E. _-A</string>
    <string name="questao2F">F. Compilation fails</string>
    <string name="questao2G">G. An exception is thrown at runtime</string>
    <string name="botaoQuestao">Check Answers!</string>
    <string name="RespostaQuestao2">Answer:\n
        \n
    B is correct. This question is using valid (but inappropriate and weird) identifiers, static
    imports, var-args in main(), and pre-incrementing logic..\n
    \n
    A, B, D, F and G are incorrect based on the above.</string>
    <string name="Questao9">Given the following directory structure:\n
        \n
       
       x-|\n
&#160;&#160;&#160;|- FindBaz.class\n
&#160;&#160;&#160;|\n
&#160;&#160;&#160;|- test-|\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;|- Baz.class\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;|\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;|- myApp-|\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;|- Baz.class
       \n
		\n
		And given the contents of the related .java files:\n
		\n
1. public class FindBaz {
2. public static void main(String[] args) { new Baz(); }
3. }\n
\n
In the test directory:\n
\n
1. public class Baz {
2. static { System.out.println("test/Baz"); }
3. }\n
\n
In the myApp directory:\n
\n
1. public class Baz {
2. static { System.out.println("myApp/Baz"); }
3. }\n
\n
If the current directory is x, which invocations will produce the output "test/Baz"? (Choose
all that apply.)</string>
    <string name="questao9A">A. java FindBaz</string>
    <string name="questao9B">B. java -classpath test FindBaz</string>
    <string name="questao9C">C. java -classpath .:test FindBaz</string>
    <string name="questao9D">D. java -classpath .:test/myApp FindBaz</string>
    <string name="questao9E">E. java -classpath test:test/myApp FindBaz</string>
    <string name="questao9F">F. java -classpath test:test/myApp:. FindBaz</string>
    <string name="questao9G">G. java -classpath test/myApp:test:. FindBaz</string>
    <string name="RespostaQuestao9">Answer:\n
        \n
  C and F are correct. The java command must find both FindBaz and the version of
Baz located in the test directory. The "." finds FindBaz, and "test" must come before
"test/myApp" or java will find the other version of Baz. Remember the real exam will
default to using the Unix path separator.\n
    \n
    A, B, D, E, e G are incorrect based on the above.</string>
    <string name="Questao32">Given:\n
        \n
3. class Building {\n
4. Building() { System.out.print("b "); }\n
5. Building(String name) {\n
6. this(); System.out.print("bn " + name);\n
7. }\n
8. }\n
9. public class House extends Building {\n
10. House() { System.out.print("h "); }\n
11. House(String name) {\n
12. this(); System.out.print("hn " + name);\n
13. }\n
14. public static void main(String[] args) { new House("x "); }\n
15. }\n
\n
What is the result?\n</string>
    <string name="questao32A">A. h hn x</string>
    <string name="questao32B">B. hn x h</string>
    <string name="questao32C">C. b h hn x</string>
    <string name="questao32D">D. b hn x h</string>
    <string name="questao32E">E. bn x h hn x</string>
    <string name="questao32F">F. b bn x h hn x</string>
    <string name="questao32G">G. bn x b h hn x</string>
    <string name="questao32H">H. Compilation fails</string>
    <string name="RespostaQuestao32">Answer:\n
        \n
 C is correct. Remember that constructors call their superclass constructors, which execute
first, and that constructors can be overloaded.\n
    \n
  A, B, D, E, F, G, and H are incorrect based on the above information.</string>
    <string name="Questao41">Given:\n
        \n
class Bird {\n
{ System.out.print("b1 "); }\n
public Bird() { System.out.print("b2 "); }\n
}\n
class Raptor extends Bird {\n
static { System.out.print("r1 "); }\n
public Raptor() { System.out.print("r2 "); }\n
{ System.out.print("r3 "); }\n
static { System.out.print("r4 "); }\n
}\n
class Hawk extends Raptor {\n
public static void main(String[] args) {\n
System.out.print("pre ");\n
new Hawk();\n
System.out.println("hawk ");\n
}\n
}\n
\n
What is the result?\n</string>
    <string name="questao41A">A. pre b1 b2 r3 r2 hawk</string>
    <string name="questao41B">B. pre b2 b1 r2 r3 hawk</string>
    <string name="questao41C">C. pre b2 b1 r2 r3 hawk r1 r4</string>
    <string name="questao41D">D. r1 r4 pre b1 b2 r3 r2 hawk</string>
    <string name="questao41E">E. r1 r4 pre b2 b1 r2 r3 hawk</string>
    <string name="questao41F">F. pre r1 r4 b1 b2 r3 r2 hawk</string>
    <string name="questao41G">G. pre r1 r4 b2 b1 r2 r3 hawk</string>
    <string name="questao41H">H. The order of output cannot be predicted</string>
    <string name="questao41I">I. Compilation fails</string>
    <string name="RespostaQuestao41">Answer:\n
        \n
D is correct. Static init blocks are executed at class loading time, instance init blocks run
right after the call to super() in a constructor. When multiple init blocks of a single type
occur in a class, they run in order, from the top down.\n
    \n
  A, B, C, E, F, G, H, and I are incorrect based on the above.</string>
    <string name="Questao42">Given:\n
        \n
3. public class Bridge {\n
4. public enum Suits {\n
5. CLUBS(20), DIAMONDS(20), HEARTS(30), SPADES(30),\n
6. NOTRUMP(40) { public int getValue(int bid) {\n
return ((bid-1)*30)+40; } };\n
7. Suits(int points) { this.points = points; }\n
8. private int points;\n
9. public int getValue(int bid) { return points * bid; }\n
10. }\n
11. public static void main(String[] args) {\n
12. System.out.println(Suits.NOTRUMP.getBidValue(3));\n
13. System.out.println(Suits.SPADES + " " + Suits.SPADES.points);\n
14. System.out.println(Suits.values());\n
15. }\n
16. }\n
\n
Which are true? (Choose all that apply.)\n</string>
    <string name="questao42A">A. The output could contain 30</string>
    <string name="questao42B">B. The output could contain @bf73fa</string>
    <string name="questao42C">C. The output could contain DIAMONDS</string>
    <string name="questao42D">D. Compilation fails due to an error on line 6</string>
    <string name="questao42E">E. Compilation fails due to an error on line 7</string>
    <string name="questao42F">F. Compilation fails due to an error on line 8</string>
    <string name="questao42G">G. Compilation fails due to an error on line 9</string>
    <string name="questao42H">H. Compilation fails due to an error within lines 12 to 14</string>
    <string name="RespostaQuestao42">Answer:\n
        \n
A and B are correct. The code compiles and runs without exception. The values()
method returns an array reference, not the contents of the enum, so DIAMONDS is never
printed.\n
    \n
  C, D, E, F, G, and H are incorrect based on the above.</string>
    <string name="Questao52">Given:\n
        \n
class Feline {\n
public static void main(String[] args) {\n
Long x = 42L;\n
Long y = 44L;\n
System.out.print(" " + 7 + 2 + " ");\n
System.out.print(foo() + x + 5 + " ");\n
System.out.println(x + y + foo());\n
}\n
static String foo() { return "foo"; }\n
}\n
\n
What is the result?</string>
    <string name="questao52A">A. 9 foo47 86foo</string>
    <string name="questao52B">B. 9 foo47 4244foo</string>
    <string name="questao52C">C. 9 foo425 86foo</string>
    <string name="questao52D">D. 9 foo425 4244foo</string>
    <string name="questao52E">E. 72 foo47 86foo</string>
    <string name="questao52F">F. 72 foo47 4244foo</string>
    <string name="questao52G">G. 72 foo425 86foo</string>
    <string name="questao52H">H. 72 foo425 4244foo</string>
    <string name="questao52I">I. Compilation fails</string>
    <string name="RespostaQuestao52">Answer:\n
        \n
G is correct. Concatenation runs from left to right, and if either operand is a String,
the operands are concatenated. If both operands are numbers they are added together.
Unboxing works in conjunction with concatenation.\n
    \n
  A, B, C, D, E, F, H, and I are incorrect based on the above.</string>
    <string name="Questao59">Given:\n
        \n
class Plane {\n
static String s = "-";\n
public static void main(String[] args) {\n
new Plane().s1();\n
System.out.println(s);\n
}\n
void s1() {\n
try { s2(); }\n
catch (Exception e) { s += "c"; }\n
}\n
void s2() throws Exception {\n
s3(); s += "2";\n
s3(); s += "2b";\n
}\n
void s3() throws Exception {\n
throw new Exception();\n
} }\n
\n
What is the result?</string>
    <string name="questao59A">A. -</string>
    <string name="questao59B">B. -c</string>
    <string name="questao59C">C. -c2</string>
    <string name="questao59D">D. -2c</string>
    <string name="questao59E">E. -c22b</string>
    <string name="questao59F">F. -2c2b</string>
    <string name="questao59G">G. -2c2bc</string>
    <string name="questao59H">H. Compilation fails</string>
    <string name="RespostaQuestao59">Answer:\n
        \n
B is correct. Once s3() throws the exception to s2(), s2() throws it to s1(), and no
more of s2()’s code will be executed.\n
    \n
A, C, D, E, F, G, and H are incorrect based on the above.</string>
    <string name="Questao68">Given:\n
        \n
  3. public class OverAndOver {\n
4. static String s = "";\n
5. public static void main(String[] args) {\n
6. try {\n
7. s += "1";\n
8. throw new Exception();\n
9. } catch (Exception e) { s += "2";\n
10. } finally { s += "3"; doStuff(); s += "4";\n
11. }\n
12. System.out.println(s);\n
13. }\n
14. static void doStuff() { int x = 0; int y = 7/x; }\n
15. }\n
\n
What is the result?</string>
    <string name="questao68A">A. 12</string>
    <string name="questao68B">B. 13</string>
    <string name="questao68C">C. 123</string>
    <string name="questao68D">D. 1234</string>
    <string name="questao68E">E. Compilation fails</string>
    <string name="questao68F">F. 123 followed by an exception</string>
    <string name="questao68G">G. 1234 followed by an exception</string>
    <string name="questao68H">H. An exception is thrown with no other output</string>
    <string name="RespostaQuestao68">Answer:\n
        \n
H is correct. It\'s true that the value of String s is 123 at the time that the divide-byzero
exception is thrown, but finally() is not guaranteed to complete, and in this case
finally() never completes, so the System.out.println (S.O.P.) never executes.\n
    \n
A, B, C, D, E, F, and G are incorrect based on the above.</string>
</resources>