<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
<LinearLayout  android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Questao9"
        />
    
        <CheckBox android:id="@+id/checkbox_questao9A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao9A"
        />
    
    <CheckBox android:id="@+id/checkbox_questao9B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao9B"
        />
   
    <CheckBox android:id="@+id/checkbox_questao9C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao9C"
        />
   
    <CheckBox android:id="@+id/checkbox_questao9D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao9D"
        />
    
   <CheckBox android:id="@+id/checkbox_questao9E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao9E"
        />
   
    <CheckBox android:id="@+id/checkbox_questao9F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao9F"
        />
    
     <CheckBox android:id="@+id/checkbox_questao9G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao9G"
        />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/botaoQuestao"
        android:onClick="abrirResposta"/>
    
    <TextView
        android:id="@+id/RespostaQuestao9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RespostaQuestao9"
        android:visibility="invisible"
        />

</LinearLayout>
</ScrollView>