<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent">


<LinearLayout  android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Questao2"
        />
    
        <CheckBox android:id="@+id/checkbox_questao2A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao2A"
        />
    
    <CheckBox android:id="@+id/checkbox_questao2B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao2B"
        />
   
    <CheckBox android:id="@+id/checkbox_questao2C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao2C"
        />
   
    <CheckBox android:id="@+id/checkbox_questao2D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao2D"
        />
    
    <CheckBox android:id="@+id/checkbox_questao2E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao2E"
        />
   
    <CheckBox android:id="@+id/checkbox_questao2F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao2F"
        />
    
    <CheckBox android:id="@+id/checkbox_questao2G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao2G"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/botaoQuestao"
        android:onClick="abrirResposta"/>
    
    <TextView
        android:id="@+id/RespostaQuestao2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RespostaQuestao2"
        android:visibility="invisible"
        />

</LinearLayout>
</ScrollView>
